src/kubernetes/core/authentik/manifests/ingress.yml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: authentik
  namespace: authentik
spec:
  parentRefs:
  - name: nginx
    namespace: nginx-gateway
  hostnames:
  - authentik.valhallahub.nl
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: authentik-server
      port: 80
